
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-pl ($LastChangedRevision$, $LastChangedDate$)
====================================
- Added autotag TV input widget that grabs tags from a list of the tags so far for all content values for that TV
- [#MODX-2161] Added sanity check for incorrect or invalid filemanager_path values in file tree
- Added missing deleted checkbox on resource panels
- [#MODX-2167] Fixed issue where duplicate button was creating incorrect duplicate name
- [#MODX-2162] Fixed issues with set to default in TV values, reliance on processedValue
- [#MODX-2168] Fixed new user panel issue with missing JS reference
- [#MODX-2160] Fixed bug where config check was running checkPolicy on resources that caused inadvertent missing unavail/error page message
- Some query optimizations in processors
- [#MODX-2159] Ensure richtext_default setting is respected
- Fixed bug where context settings create modal wasnt resetting values
- Added missing tabpanel IDs for various tabpanels across mgr ui
- Fixed bug that was strtolower'ing any strings in tabNew FC rule
- Added grid renderer to FC grid
- Tweaks to general UX, other slight cosmetic fixes
- [#MODX-2156] Fixed unitialized variable in modTemplateVar::renderOutput/renderInput
- [#MODX-2152] Fixed issue where local package dialog wasnt showing after clicking modxcms.com package browser
- [#MODX-2154] Fixed issue where publish_document access permission was being ignored in resource processors
- [#MODX-2149] Fixed issue where Package Management's modal would only once if hidden
- Fixed issues with stay button on resources
- [#MODX-2008] Added Swedish translation
- [#MODX-2148] Fixed image TV thumbnail sizing
- [#MODX-2145] Fixed 'New' context menu text to be easier to translate
- Slight tweaks to CSS for MODx.Browser file thumbs